# se_polish_calc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src_polish_calc/include/: element.hpp  pc.hpp
src_polish_calc/src/: CMakeLists.txt  main.cpp
src_polish_calc/test/: CMakeLists.txt  api_test.hpp  expr_test.hpp  main.cpp
